--- a/web_project/soft_skills/templates/soft_skills/soft_skills.html
+++ b/web_project/soft_skills/templates/soft_skills/soft_skills.html
@@ -5,5 +5,15 @@
 {% block content %}
     <div class ="features">
         <h1>Soft-Skills</h1>
+        {% if soft_skills %}
+            {% for el in soft_skills %}
+                <div class ="alert alert-warning">
+                    <h3>{{ el.title }}</h3>
+                    <p>{{ el.description }}</p>
+                </div>
+            {% endfor %}
+        {% else %}
+            <p>У вас нет записей!</p>
+        {% endif %}
     </div>
 {% endblock %}
